# deckgym-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  database.json  pyproject.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  python.yml
example_decks/: giratina-darkrai.txt
python/deckgym/: __init__.py
src/: ability_ids.rs  attack_ids.rs  card_ids.rs  card_validation.rs  combinatorics.rs  database.rs  deck.rs  effects.rs  game.rs  gym_wrapper.rs  lib.rs  main.rs  optimize.rs  python_bindings.rs  simulate.rs  state.rs  tool_ids.rs  tools.rs
src/actions/: apply_abilities_action.rs  apply_action.rs  apply_action_helpers.rs  apply_attack_action.rs  apply_trainer_action.rs  effect_ability_mechanic_map.rs  effect_mechanic_map.rs  mod.rs  mutations.rs  outcomes.rs  shared_mutations.rs  types.rs
src/card_logic/: mod.rs
src/hooks/: core.rs  counterattack.rs  mod.rs  retreat.rs
src/models/: card.rs  mod.rs  played_card.rs
src/move_generation/: attacks.rs  mod.rs  move_generation_abilities.rs  move_generation_trainer.rs
src/players/: attach_attack_player.rs  evolution_rusher_player.rs  expectiminimax_player.rs  mcts_player.rs  value_function_player.rs  value_functions.rs  weighted_random_player.rs
src/tui/: app.rs  (+1 more)
tests/: ability_effects_test.rs  ability_mechanic_examples_test.rs  apply_actions_test.rs  attack_effects_test.rs  b1a_cards_test.rs  confusion_test.rs  darkrai_ex_test.rs  game_api_test.rs  magneton_test.rs  may_trainer_test.rs  pokemon_center_lady_test.rs  pokemon_mechanics_test.rs  steel_apron_test.rs
(+9 files in other folders)
